@@ -103,7 +103,7 @@ units</entry></row>
 <row><entry>%filepath</entry><entry>Full path to uploaded/downloaded file <footnote><para>
 available during an upload/download</para></footnote>
 </entry></row>
-<row><entry>%filecrc</entry><entry>CRC of uploaded/downloaded file</footnote>
+<row><entry>%filecrc</entry><entry>CRC of uploaded/downloaded file
 </entry></row>
 
 </tbody>
