@@ -4,9 +4,9 @@
 
 <ul id="tabmenu">
         <li><a href="../index.php">Features</a></li>
-        <li><a href="../changec.php">   .0.1RC1//0.1RC2</a></li>
-        <li><a href="../changeb.php">   .0.1RC3//0.1RC4</a></li>
-        <li><a href="../changea.php">   .latest changes</a></li>
+        <li><a href="../changea.php">Changes &lt;  0.1</a></li>
+        <li><a href="../changeb.php">Changes 0.1 -> 0.2</a></li>
+        <li><a href="../changec.php">   .latest changes</a></li>
         <li><a href="index.html">Documentation</a></li>
         <li><a href="../screen.php">Screenshots</a></li>
         <li><a href="http://sourceforge.net/project/showfiles.php?group_id=78247">Download</a></li>
